--- a/index.html
+++ b/index.html
@@ -1922,7 +1922,7 @@ var pJS = function (e, a) {
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: IDK ✦</p>
+                              <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: SJPS ✦</p>
                               <p class="text">~ Dᴇᴠ ~</p>
                               <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
                          </div>
